@@ -1,3 +1,8 @@
+2001-06-09  Martin Baulig  <baulig@suse.de>
+
+	* bonobo-config-ditem.c (real_sync): Implemented. We can now
+	write a file back to disk if it's modified.
+
 2001-06-08  Martin Baulig  <baulig@suse.de>
 
 	* bonobo-config-ditem-utils.c (bonobo_config_ditem_decode_any):
